--- a/DoitServer/Base.lproj/Main.storyboard
+++ b/DoitServer/Base.lproj/Main.storyboard
@@ -25,14 +25,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="270" verticalHuggingPriority="270" translatesAutoresizingMaskIntoConstraints="NO" id="gHy-8i-XIN">
-                                <rect key="frame" x="85" y="64" width="150" height="150"/>
+                                <rect key="frame" x="85" y="20" width="150" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="7dd-0V-c9X"/>
-                                    <constraint firstAttribute="width" constant="150" id="OoV-fY-0w2"/>
+                                    <constraint firstAttribute="height" priority="900" constant="150" id="7dd-0V-c9X"/>
+                                    <constraint firstAttribute="width" priority="900" constant="150" id="OoV-fY-0w2"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="center" axis="vertical" distribution="equalSpacing" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Fu3-E8-t12">
-                                <rect key="frame" x="8" y="214" width="304" height="250"/>
+                                <rect key="frame" x="8" y="170" width="304" height="250"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user name" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ue5-Pi-6M8">
                                         <rect key="frame" x="101" y="0.0" width="103" height="27"/>
@@ -373,6 +373,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="descriptionFiled" destination="MHB-3c-Ryz" id="Scc-dB-TMV"/>
+                        <outlet property="hashTagField" destination="lVn-Yb-n5X" id="0oh-xF-HbI"/>
                         <outlet property="imageView" destination="dEv-Cx-QYU" id="cxI-x8-cd6"/>
                     </connections>
                 </viewController>
