Done with popup image

--- a/DoitServer/Base.lproj/Main.storyboard
+++ b/DoitServer/Base.lproj/Main.storyboard
@@ -215,6 +215,30 @@
             </objects>
             <point key="canvasLocation" x="1350" y="1055"/>
         </scene>
+        <!--Popover View Controller-->
+        <scene sceneID="gFs-nf-UqB">
+            <objects>
+                <viewController storyboardIdentifier="popover" id="YP4-Jm-qbI" customClass="PopoverViewController" customModule="DoitServer" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="o38-gc-rPZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="7an-w6-i8f"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="popover" id="a7W-4g-svn">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.85963564039999996" green="1" blue="0.79539865860000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="200" height="200"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="200" height="200"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U39-lt-sj4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1888" y="1868"/>
+        </scene>
         <!--Sign In View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
